2008-06-26 Fix mathtext bug for expressions like $x_{\leftarrow}$ - MGD

2008-06-26 Fix direction of horizontal/vertical hatches - MGD

===============================================================
2008-06-22 Released 0.91.4 at revision 5638

2008-06-09 Don't install Enthought.Traits along with matplotlib. For
           matplotlib developers convenience, it can still be
           installed by setting an option in setup.cfg while we figure
           decide if there is a future for the traited config - DSD

2008-06-02 Fix crash in Agg when drawing collections with no fill and/or
           edge color - MGD

2008-05-29 Released 0.91.3 at revision 5313

2008-05-29 matplotlib.image.imread now no longer always returns RGBA
           -- if the image is luminance or RGB, it will return a MxN
           or MxNx3 array if possible.  Also uint8 is no longer always
           forced to float.

2008-05-29 Implement path clipping in PS backend - JDH

2008-05-29 Fixed two bugs in texmanager.py:
               improved comparison of dvipng versions
               fixed a bug introduced when get_grey method was added
           - DSD

2008-05-29 Implement path clipping in SVG backend - MGD

2008-05-28 Fix crashing of PDFs in xpdf and ghostscript when two-byte
           characters are used with Type 3 fonts - MGD

2008-05-28 Allow keyword args to configure widget properties as
           requested in
           http://sourceforge.net/tracker/index.php?func=detail&aid=1866207&group_id=80706&atid=560722
           - JDH

2008-05-28 Fix rendering of composite glyphs in Type 3 conversion
           (particularly as evidenced in the Eunjin.ttf Korean font)
           Thanks Jae-Joon Lee for finding this!

2008-05-21 Fix segfault in TkAgg backend - MGD

2008-05-21 Fix a "local variable unreferenced" bug in plotfile - MM

2008-05-19 Fix crash when Windows can not access the registry to
           determine font path [Bug 1966974, thanks Patrik Simons] - MGD
