@@ -1,3 +1,7 @@
+2008-06-30 Removed Qt4 NavigationToolbar2.destroy -- it appears to
+           have been unnecessary and caused a bug reported by P.
+           Raybaut - DSD
+
 2008-06-26 Fix mathtext bug for expressions like $x_{\leftarrow}$ - MGD
 
 2008-06-26 Fix direction of horizontal/vertical hatches - MGD
